# MyColorViewer

./: CMakeLists.txt
Log/: OrbbecSDK.log.txt
src/: ColorViewer.cpp  clearCode.txt
